corrected preserve_whitespace rendering

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         {% if page == 'home' %}
 
         <form class="" action="/go" method="post">
-            <textarea name="thread_content" rows="8" cols="80"></textarea>
+            <textarea name="thread_content" rows="20" cols="40"></textarea>
             <input type="checkbox" name="preserve_whitespace" value="preserve_whitespace">Preserve whitespace?<br>
             <input type="submit" name="submit_button" value="Go">
         </form>
@@ -21,8 +21,8 @@
 
             {% for tweet in data.tweets %}
 
-                <p>{{tweet}}</p>
-
+                <p style="white-space:pre;">{{tweet}}</p>
+                
             {% endfor %}
 
         <form class="" action="/auth" method="post">
